--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
       <div class="logo">
-      	<b class="title">VÅRKRAGE</b><br><span>modern fusion kitchen</span>
+      	<b class="title">VÅRDAGEN</b><br><span>modern fusion kitchen</span>
       </div>
       <div class="gallery" id="gallery"></div>
     </main>
